--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "@testing-library/react": "^9.4.1",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.4.1",
+    "d3": "^5.15.0",
     "react": "^16.13.0",
     "react-bootstrap": "^1.0.0-beta.17",
+    "react-csv-to-table": "0.0.4",
     "react-dom": "^16.13.0",
     "react-object-list": "^0.2.9",
     "react-router-dom": "^5.1.2",
