--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^4.4.1",
     "d3": "^5.15.0",
     "gh-pages": "^2.2.0",
+    "mdbreact": "^4.25.3",
     "react": "^16.13.0",
     "react-bootstrap": "^1.0.0-beta.17",
     "react-csv-to-table": "0.0.4",
