--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^16.13.0",
     "react-object-list": "^0.2.9",
     "react-router-dom": "^5.1.2",
+    "react-router-hash-link": "^1.2.2",
     "react-scripts": "3.4.0",
     "reactjs-popup": "^1.5.0"
   },
